--- a/Parcial2/HelloJsBrowser/index.html
+++ b/Parcial2/HelloJsBrowser/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Browser</title>
     <script src="./index.js"></script>
 </head>
 <body>
-    <script>
-        console.log("Hello, World!");
-    </script>
+    <div id="message"></div>
 </body>
 </html>
